# TP_moder_CPP

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Get_films.cpp  Get_films.h  Get_rating.h  Get_year.h  README.md  README.txt  ReadMe.txt  main.cpp  run.sh  valgrind_log.xml
Get_Films/: Get_films.cpp  Get_films.h
Get_films/: Get_films.cpp  Get_films.h
Get_local/: Get_local.cpp  Get_local.h
Get_rating/: Get_rating.cpp  Get_rating.h
Get_year/:  Get_rating.h  Get_rating.cpp  Get_year.cpp  Get_year.h
Sort_films/: Sort_films.cpp  Sort_films.h
Tests/: Test.txt
build~/: CMakeCache.txt  Makefile  cmake_install.cmake
header/: CLIcommands.h  Cat.h  Echo.h  Get_films.h  Get_local.h  Get_rating.h  Get_year.h  Sort_films.h  Wcl.h  handler.h
src/: CLIcommands.cpp  Cat.cpp  Echo.cpp  Get_films.cpp  Get_local.cpp  Get_rating.cpp  Get_year.cpp  Sort_films.cpp  Wcl.cpp  handler.cpp  main.cpp
